# autoware-platform-ci-cd

./: README.md  conanfile.py
.github/workflows/: ci-cd.yaml
cpp_cruise_control/: CMakeLists.txt  conanfile.py
cpp_cruise_control/include/: cruise.h
cpp_cruise_control/src/: cruise.cpp
cpp_cruise_control/tests/: test_cruise.cpp
docker/: Dockerfile.cpp  Dockerfile.rust  docker-compose.yml
docs/: arch_overview.md  release_notes.md
env-config/: prod.env  qa.env
rust_telemetry/: Cargo.toml
rust_telemetry/src/: main.rs
rust_telemetry/tests/: test_telemetry.rs
scripts/: blackduck_scan.sh  build_docs.sh
tests/: test_sample.py
